<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/img"
        android:contentDescription="@string/image_meal"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/image_corner"
        android:src="@drawable/img"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/img"
        android:textColor="@color/black"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintRight_toLeftOf="@id/btnLike"
        android:text="@string/home_made_pizza"
        android:id="@+id/tvMealName"/>
    <ImageButton
        android:id="@+id/btnLike"
        android:layout_width="wrap_content"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:layout_height="wrap_content"
        android:src="@drawable/like_icon"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/image_button_like"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvMealName"
        app:layout_constraintLeft_toRightOf="@id/img"
        android:id="@+id/tvTime"
        android:drawableStart="@drawable/clockicon"
        android:drawablePadding="10dp"
        android:text="@string/time"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/preto_40"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintTop_toBottomOf="@id/tvTime"
        app:layout_constraintLeft_toRightOf="@id/img"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/preto_40"
        android:layout_marginBottom="10dp"
        android:scrollbars="vertical"
        android:lines="3"/>

</androidx.constraintlayout.widget.ConstraintLayout>