<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    tools:context=".ui.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgMeal"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:contentDescription="@string/image_meal"
            android:scaleType="fitXY"
            android:src="@drawable/img"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/white_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:layout_marginHorizontal="15dp"
            android:src="@drawable/baseline_arrow_back_ios_24"
            android:contentDescription="@string/back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/search_desc"
            android:src="@drawable/baseline_search_white_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/owner"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/tvMealName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/imgMeal" />

        <TextView
            android:id="@+id/tvMealName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meal_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imgMeal"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOwner" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/eye_color_black10"
            android:drawablePadding="10dp"
            android:paddingHorizontal="10dp"
            android:text="@string/_104"
            android:gravity="center"
            android:foregroundGravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMealName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMealTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:drawableStart="@drawable/clock_preto90"
            android:drawablePadding="10dp"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tvAddToMyList"
            app:layout_constraintTop_toBottomOf="@id/imgMeal" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAddToMyList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/like_icon"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:foregroundGravity="center"
            android:text="@string/add_to_my_list"
            android:textColor="#757575"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@id/tvMealTime"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgMeal" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRemoveToMyList"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/like_full_icon"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:foregroundGravity="center"
            android:text="@string/add_to_my_list"
            android:textColor="@color/red"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@id/tvMealTime"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgMeal" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvIngredients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/ingredients"
            android:textColor="#78909C"
            android:textSize="22sp"
            app:drawableStartCompat="@drawable/chef_preto_icon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMealTime" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tvIngredients"
            tools:itemCount="4"
            tools:listitem="@layout/ingredient_item" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHowToMake"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/how_to_make"
            android:textColor="#78909C"
            android:textSize="22sp"
            app:drawableStartCompat="@drawable/chef_preto_icon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvListIngredients" />
        <TextView
            android:id="@+id/tvMake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvHowToMake"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>