<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.meal.ListMealsFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="-100dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="@drawable/menu_icon"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_search_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/imvSearch"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_star_24"
            android:id="@+id/tvDailyRecipe"
            android:text="@string/daly_recipe_for_you"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDate"
            android:textColor="@color/preto_40"
            android:text="@string/date"
            app:layout_constraintTop_toBottomOf="@id/tvDailyRecipe"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="15sp"
            android:layout_marginTop="10dp"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvDate"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="30dp"
            android:background="@drawable/image_corner"
            android:scaleType="fitXY"
            android:src="@drawable/img"
            android:id="@+id/imgMeal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
        </ImageView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/eggs_benedict"
            app:layout_constraintBottom_toBottomOf="@id/imgMeal"
            app:layout_constraintBottom_toTopOf="@id/btnMakeIt"
            app:layout_constraintLeft_toLeftOf="@id/imgMeal"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/tvMealName"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:drawableStart="@drawable/clockicon"
            android:drawablePadding="10dp"
            android:text="@string/time"
            app:layout_constraintBottom_toBottomOf="@id/imgMeal"
            app:layout_constraintBottom_toTopOf="@id/btnMakeIt"
            app:layout_constraintRight_toRightOf="@id/imgMeal"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/tvMealTime"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_solid"
            android:id="@+id/btnMakeIt"
            android:text="@string/make_it_now"
            app:layout_constraintTop_toBottomOf="@id/imgMeal"
            android:layout_marginTop="-30dp"
            android:drawableStart="@drawable/chef_icon"
            app:layout_constraintLeft_toLeftOf="parent"
            android:paddingHorizontal="20dp"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent_meals"
            android:id="@+id/tvRecentMeals"
            android:textColor="@color/preto_40"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/clockicon"
            app:layout_constraintTop_toBottomOf="@id/btnMakeIt"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginHorizontal="10dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListRecentMeals"
            android:layout_width="match_parent"
            android:nestedScrollingEnabled="false"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="12dp"
            tools:listitem="@layout/meal_item"
            tools:itemCount="3"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tvRecentMeals"
            app:layout_constraintBottom_toTopOf="@id/btnSeeAll"
             />
        <com.facebook.shimmer.ShimmerFrameLayout
            app:layout_constraintTop_toBottomOf="@id/tvRecentMeals"
            android:id="@+id/shimmer_view_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--4 dong include thể hiện cho 4 item trong RecyclerView đang được load data-->
                <include layout="@layout/data_placeholder" />

                <include layout="@layout/data_placeholder" />

                <include layout="@layout/data_placeholder" />

                <include layout="@layout/data_placeholder" />

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:id="@+id/btnSeeAll"
            app:layout_constraintTop_toBottomOf="@id/rvListRecentMeals"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/preto_40"
            android:text="@string/see_all"
            android:textAllCaps="false"
            android:paddingHorizontal="40dp"
            android:visibility="invisible"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/button_home_solid"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>